--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,17 @@
 <!doctype html>
-<html lang="nl">
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="apple-mobile-web-app-title" content="$SIGNALS_PWA_TITLE">
+  <meta name="apple-mobile-web-app-title" content="">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="$SIGNALS_STATUS_BAR_STYLE">
-  <meta name="theme-color" content="$SIGNALS_THEME_COLOR">
-  <link rel="icon" href="$SIGNALS_FAVICON">
-  <link rel="apple-touch-icon" sizes="180x180" href="$SIGNALS_IOS_ICON">
+  <meta name="apple-mobile-web-app-status-bar-style" content="">
+  <meta name="theme-color" content="">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="">
   <link rel="manifest" href="/manifest.json">
-  <title>$SIGNALS_SITE_TITLE</title>
-  <script>
-    window.CONFIG = $SIGNALS_CONFIG;
-  </script>
+  <title>SIA</title>
+  
 </head>
 
 <body>
