--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="">
   <link rel="manifest" href="/manifest.json">
-  <title>SIA</title>
+  <title>SEDA</title>
   
 </head>
 
